--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "json-server": "^1.0.0-beta.2",
     "macro-css": "^1.0.5",
     "node-sass": "^7.0.3",
     "react": "^18.3.1",
