--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "macro-css": "^1.0.5",
     "node-sass": "^7.0.3",
     "react": "^18.3.1",
+    "react-content-loader": "^7.0.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
